# test-agent

./: .gitignore  config.json  gunicorn.conf.py  kaku-settings.json  kaku-theme.json  main.py  pyproject.toml  test_events.py  test_stream_api.py  test_stream_json.py  test_stream_real.py  test_stream_resp.py
app/: main.py
app/agents/: __init__.py  adaptive_router.py  coordinator.py  history_processors.py  intent_recognition.py  orchestrator.py  rag_answer.py  refine_question.py  router_agent.py  tools.py
app/api/: __init__.py  dependencies.py  router.py  schemas.py
app/config/: loader.py  models.py
app/core/: http_client_pool.py  mcp.py  model_registry.py  resilience.py  telemetry.py
app/demo/: async_decoupling.py
app/memory/: __init__.py  long_term.py  redis_session_store.py  session_store.py
app/models/: domain.py
app/providers/: base.py  factory.py  federated.py
app/providers/groundedness/: __init__.py  gcp_groundedness.py
app/providers/moderation/: __init__.py  azure_content_safety.py
app/providers/ranker/: __init__.py  gcp_ranker.py
app/providers/retriever/: __init__.py  gcp_vertex_search.py
app/services/: events.py  exceptions.py  flow_context.py  flow_engine.py  tenant_manager.py
app/services/handlers/: __init__.py  analysis.py  base.py  groundedness.py  llm.py  memory.py  moderation.py  ranking.py  retriever.py
tests/: conftest.py  test_azure_content_safety.py  test_http_client_pool.py
tests/unit/: test_coordinator.py  test_flow_engine.py
