[project]
name = "agent-kms"
version = "0.1.0"
description = "Multi-tenant RAG Knowledge Management System"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "openai>=2.20.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.58.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-discoveryengine>=0.13.0",
    "google-cloud-aiplatform>=1.80.0",
]
azure = [
    "azure-ai-contentsafety>=1.0.0",
    "azure-identity>=1.19.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
]
