[project]
name = "agent-kms"
version = "0.1.0"
description = "Multi-tenant RAG Knowledge Management System"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "openai>=2.20.0",
    "azure-identity>=1.15.0",
    "azure-core>=1.30.0",
    "azure-ai-contentsafety>=1.0.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.58.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.1",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-gcp-trace>=1.6.0",
    "google-cloud-logging>=3.10.0",
    "tenacity>=8.2.3",
    "uvicorn>=0.34.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle (Error)
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "C4",     # flake8-comprehensions
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
]
ignore = ["D105", "D107", "D205", "D415", "E501", "B011", "B028", "B904", "PIE804"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
